--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -9,11 +9,11 @@
 <title>TipTopBites</title>
 
 <!-- Bootstrap core CSS -->
-<link href="/css/bootstrap.min.css" rel="stylesheet" />
+<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 
 
 <!-- Custom styles for this template -->
-<link href="/css/styles.css" rel="stylesheet" />
+<link th:href="@{/css/styles.css}" rel="stylesheet" />
 </head>
 
 <body>
@@ -59,9 +59,11 @@
 
 
 	<div th:fragment="body-bottom-scripts">
-		<script
-			src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<script src="/js/bootstrap.min.js"></script>
+		
+			<script 
+			th:src="@{/js/jquery.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		
 	</div>
 </body>
 </html>
