Main database cretaed and connected

--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -38,14 +38,14 @@
 							data-toggle="dropdown" role="button" aria-haspopup="true"
 							aria-expanded="false">Food <span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li><a href="#">Add new</a></li>
+								<li><a th:href="@{/food/add}">Add new</a></li>
 								<li><a href="#">View all</a></li>
 								
 							</ul></li>
 					</ul>
 					
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Log out</a></li>
+						<li><a th:href="@{/logout}">Log out</a></li>
 						
 							
 					</ul>
