--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -39,7 +39,7 @@
 							aria-expanded="false">Food <span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li><a th:href="@{/food/add}">Add new</a></li>
-								<li><a href="#">View all</a></li>
+								<li><a th:href="@{/food/foodList}">View all</a></li>
 								
 							</ul></li>
 					</ul>
