--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -32,11 +32,11 @@
 				<ul class="nav navbar-nav navbar-left">
 					
 					<li class="dropdown">
-					<a href="#" class="dropdown-toggle"
+					<a href="@{/menu}" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">MENU <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Full menu</a></li>
+							<li><a href="@{/menu}">Full menu</a></li>
 							<li><a href="#">Allergy/Intolerance sort</a></li>
 							<li><a href="#">Something else </a></li>
 							
