--- a/BackEnd/src/main/resources/templates/orderInfo.html
+++ b/BackEnd/src/main/resources/templates/orderInfo.html
@@ -11,7 +11,7 @@
 			<ol class="breadcrumb">
 				<li><a th:href="@{/food/foodList}"><i
 						class="fa fa-long-arrow-left" aria-hidden="true"></i>Go back</a></li>
-				<li><a th:href="@{/food/updateFood?id=}+${food.id}">Edit</a></li>
+				<li><a th:href="@{/food/updateMenu?id=}+${food.id}">Edit</a></li>
 			</ol>
 		</div>
 
