update feature fixed

--- a/BackEnd/src/main/resources/templates/addFood.html
+++ b/BackEnd/src/main/resources/templates/addFood.html
@@ -108,7 +108,7 @@
 						<div class="col-md-8">
 							<div class="input-group">
 								<span class="input-group-addon">$</span> <input
-									th:value="${food.price}" type="number" name="price"
+									th:value="${food.price}" type="number" name="price" step="0.01"
 									class="form-control" id="price" placeholder="Price" />
 							</div>
 						
