--- a/BackEnd/src/main/resources/templates/orderInfo.html
+++ b/BackEnd/src/main/resources/templates/orderInfo.html
@@ -19,7 +19,7 @@
 		<div class="col-xs-3">
 		<div class="panel panel-default">
 		<div class="panel-body">
-		<img th:src="@{/image/food/}+${food.id}+'.png'" class="img-responsive"/>
+		<img th:src="@{/image/food/}+${food.id}+'.png'" class="img-responsive center-block"/>
 		</div>
 		</div>
 		</div>
