--- a/BackEnd/src/main/resources/templates/updateMenu.html
+++ b/BackEnd/src/main/resources/templates/updateMenu.html
@@ -15,7 +15,9 @@
 						Udate Menu<span style="font-size: small"> </span>
 					</legend>
 
-
+					<input hidden="hidden" name="id" th:value="${food.id}"/>
+						
+						
 					<!-- name -->
 					<div class="form-group">
 						<label class="col-md-2 control-label" for="foodName">name</label>
@@ -108,7 +110,7 @@
 						<div class="col-md-8">
 							<div class="input-group">
 								<span class="input-group-addon">$</span> <input
-									th:value="${food.price}" type="number" name="price"
+									th:value="${food.price}" type="number" name="price" step="0.01"
 									class="form-control" id="price" placeholder="Price" />
 							</div>
 						
