DataTables Table plug-in for jQuery added

--- a/BackEnd/src/main/resources/templates/foodList.html
+++ b/BackEnd/src/main/resources/templates/foodList.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1000/xhtml">
 <head th:replace="header :: header" />
@@ -42,5 +41,18 @@
 
 
 	<div th:replace="header :: body-bottom-scripts" />
+	
+	<script>
+	$(document).ready(function() {
+		$("#foodListTable").DataTable({
+			"lengthMenu":[[5,10,15,20,-1],[5,10,15,20,"All"]],
+		"ordering": false,
+		stateSave: true
+		});
+		
+	});
+	</script>
+	
+	
 </body>
 </html>
