--- a/BackEnd/src/main/resources/templates/orderInfo.html
+++ b/BackEnd/src/main/resources/templates/orderInfo.html
@@ -36,7 +36,7 @@
 		<p><strong>Price : :</strong><spam th:text="${food.price}"></spam></p>
 		</div>
 		</div>
-		<p><strong>Description :</strong><spam th:text="${food.description}"></spam></p>
+		<p><strong>Description :</strong><spam th:utext="${food.description}"></spam></p>
 		</div>
 
 	</div>
