--- a/TipTop/src/main/resources/templates/foodDetail.html
+++ b/TipTop/src/main/resources/templates/foodDetail.html
@@ -61,7 +61,7 @@
     </div>    
     </div>
     <hr/>
-    <p th:text="${food.description}"></p>
+    <p th:utext="${food.description}"></p>
     </div>
     </div>
     </form>
