--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -14,6 +14,15 @@
 
 <!-- Custom styles for this template -->
 <link th:href="@{/css/styles.css}" rel="stylesheet" />
+
+<!--data table  -->
+
+<link th:href="@{/css/jquery.dataTables.min.css}" rel="stylesheet"/>
+<link th:href="@{/css/dataTables.bootstrap.min.css}" rel="stylesheet"/>
+
+  <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+  <script>tinymce.init({ selector:'textarea' });</script>
+
 </head>
 
 <body>
@@ -63,6 +72,13 @@
 			<script 
 			th:src="@{/js/jquery.min.js}"></script>
 		<script th:src="@{/js/bootstrap.min.js}"></script>
+		
+		
+		<script 
+			th:src="@{/js/jquery.dataTables.min.js}"></script>
+		<script th:src="@{/js/dataTables.bootstrap.min.js}"></script>
+		
+		
 		
 	</div>
 </body>
