design of front page

--- a/TipTop/src/main/resources/templates/index.html
+++ b/TipTop/src/main/resources/templates/index.html
@@ -20,39 +20,22 @@
 								<li data-target="#carousel-example-generic" data-slide-to="0"
 									class="active"></li>
 								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+
 							</ol>
 
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
-									<img src="/image/pasta.jpeg "
+									<img src="/image/pasta.png "
 										style="width: 100%; height: 340px;" alt="..." />
-									<div class="carousel-caption">
-										<h4>First</h4>
-										<p>Metadata, generic types, autoboxing and auto-unboxing
-											of primitive types, enhanced for loop, enumerated types,
-											 XML Schema, SAX 2.0.2,
-											DOM Level 3, and XSLT with a fast XLSTC compiler. Unicode 4.0
-											support.</p>
-									</div>
-								</div>
-								<div class="item">
-									<img src="/image/sal.jpeg" style="width: 100%; height: 340px;"
-										alt="..." />
 									<div class="carousel-caption"></div>
 								</div>
 								<div class="item">
-									<img src="/image/pica2.jpg" style="width: 100%; height: 340px;"
+									<img src="/image/f3.jpg" style="width: 100%; height: 340px;"
 										alt="..." />
-									<div class="carousel-caption">
-										<h4>First</h4>
-										<p>Metadata, generic types, autoboxing and auto-unboxing
-											port for XML 1.1 with Namespaces, XML
-											Schema, SAX 2.0.2, DOM Level 3, and XSLT with a fast XLSTC
-											compiler. Unicode 4.0 support.</p>
-									</div>
+									<div class="carousel-caption"></div>
 								</div>
+
 								...
 							</div>
 						</div>
@@ -60,7 +43,7 @@
 				</div>
 			</div>
 			<div class="col-xs-4">
-				<img src="/image/logo1.png" class="img-responsive center-block" />
+				<img src="/image/logo2.png" class="img-responsive center-block" />
 			</div>
 		</div>
 		<hr />
@@ -68,22 +51,20 @@
 		<div class="row">
 
 			<div class="col-xs-8">
-				<div class="panel panel-default">
+				<div class="panel panel-default" >
 					<div class="panel-body">
-						<h2 style="color: #444444;">Information about app</h2>
+					
+					<h2 style="color: #444444;">TipTop</h2>
 						<br />
-						<p style="color: grey;">In the beginning there was continuous
-							flow, and then Max Planck came along and proposed quantization.
-							Quantization basically just means, that instead of bei
-							squash/crush/split a smartie, I will hunt them down and make them
-							pay!).</p>
-
-						<h3 style="color: #444444;">Allergy or intolerance?</h3>
-						<h4>
-							<a href="#tab-1" data-toggle="tab"><span
-								style="color: #f46b42;">Click here to filter the menu</span></a>
-						</h4>
-
+						<p style="color: grey;"><b>TipTop </b>is a smart, simple and
+							personalised app to order you favourite food without wasting time
+							and looking through the menu for allergy warnings or amount of calories.<br/>
+							<b>TipTop</b> puts you in control of searching and discovering safe
+							foods for all the family.<br/>
+							<b>Calorie</b> watch system helps to keep up with diet.<br/>
+							<b>Recommended </b>menu based on your eating habits.
+							</p>
+						
 
 					</div>
 				</div>
@@ -91,8 +72,23 @@
 			<div class="col-xs-4">
 				<div class="panel panel-default">
 					<div class="panel-body">
-						<div id="map"></div>
-						<!-- map -->
+					
+					<h4 style="color: #444444;">Allergy filter for:</h4>
+						
+						<ul>
+						<li><b><i>Eggs</i></b></li>
+						<li><b><i>Milk</i></b></li>
+						<li><b><i>Peanuts</i></b></li>
+						<li><b><i>Fish</i></b></li>
+						<li><b><i>Gluten</i></b></li>
+						<li><b><i>Soy</i></b></li>
+						
+						</ul>
+					
+					
+						
+						<!-- <div id="map"></div>
+						 map -->
 						<!-- 						 <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ_1stWpWTW0gRgVJJCkQbKwM&key=AIzaSyCUw8VNccRGApe1aCfv0Jqlr_jhShlkkVk"></iframe>
  -->
 					</div>
@@ -204,24 +200,12 @@
 					</div>
 
 				</div>
-				
+
 			</div>
 		</div>
-		
-		<h1 class="section-headline">
-					<span>BMI Calculator</span>
-				</h1>
 
-	<div class="yz-widget" data-calculator-type="bmi" data-language="en"
-		data-unit-system="metric" data-background-color="white"
-		data-text-color="#212121" data-primary-color="orange"
-		data-alternate-background-color="white"
-		data-alternate-text-color="#FFFFFF" data-secondary-color="#FFC107">
-		<span class="yz-copyright">Powered by <a
-			href="https://www.yazio.com/en/bmi-calculator">YAZIO</a></span>
-	</div>
-	<script src="https://widget.yazio.com/calculator.js" ></script>
 		
+
 
 	</div>
 	<!--end of container  -->
