--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -18,7 +18,7 @@
 <body>
 <div th:fragment ="navbar">
 <div class="page-top"
-		style="width: 100%; height: 20px; background-color: #C6C6C6;">
+		style="width: 100%; height: 20px; background-color: #448b5d;">
 	</div>
 
 	<!-- Static navbar -->
@@ -38,14 +38,14 @@
 						<ul class="dropdown-menu">
 							<li><a sec:authorize="isAnonymous()" th:href="@{/menu}">Full menu</a></li>
 							<li><a href="#">Allergy/Intolerance sort</a></li>
-							<li><a href="#">Something else </a></li>
+							
 							
 						</ul></li>
 						
 						
 						<form class="navbar-form">
 						<div class ="form-group">
-						<input type="text" name="keyword" class="form-control" placeholder="tType to search" />
+						<input type="text" name="keyword" class="form-control" placeholder="Type to search" />
 						</div>
 						<button type="submit" class="btn btn-default">Search</button>
 						</form>
@@ -68,7 +68,7 @@
 						</ul></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href= "#" >Basket</a></li>
+					<li><a href= "#" >My Orders</a></li>
 					<li><a sec:authorize="isAnonymous()" th:href="@{/login}">MY ACCOUNT</a></li>
 						<li><a sec:authorize="isAuthenticated()" th:href="@{/myProfile}">MY ACCOUNT</a></li>
 						<li><a sec:authorize="isAuthenticated()" th:href="@{/logout}">LOGOUT</a></li>
