--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -36,7 +36,7 @@
 							class="icon-bar"></span> <span class="icon-bar"></span> <span
 							class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" th:href="@{/}">Back End Page</a>
+					<a class="navbar-brand" th:href="@{/}">Admin</a>
 				</div>
 
 				<!-- Collect the nav links, forms, and other content for toggling -->
