--- a/BackEnd/src/main/resources/templates/addFood.html
+++ b/BackEnd/src/main/resources/templates/addFood.html
@@ -54,17 +54,17 @@
 							<select th:value="${food.category}" id="category" name="category"
 								class="form-control">
 								<option value="" selected="selected" disabled="disabled"></option>
-								<option value="salad"
+								<option value="Salad"
 									th:selected="(${food.category}=='Salad')">Salad</option>
-								<option value="soup"
+								<option value="Soup"
 									th:selected="(${food.category}=='Soup')">Soup</option>
-								<option value="breakfast"
+								<option value="Breakfast"
 									th:selected="(${food.category}=='Breakfast')">Breakfast</option>
-								<option value="pizza"
+								<option value="Pizza"
 									th:selected="(${food.category}=='Pizza')">Pizza</option>
-									<option value="pizza"
+									<option value="Pasta"
 									th:selected="(${food.category}=='Pasta')">Pasta</option>
-									<option value="pizza"
+									<option value="Desert"
 									th:selected="(${food.category}=='Desert')">Desert</option>
 									
 							</select>
