--- a/BackEnd/src/main/resources/templates/foodList.html
+++ b/BackEnd/src/main/resources/templates/foodList.html
@@ -6,7 +6,7 @@
 	<div th:replace="header :: navbar" />
 
 
-	<h1>menu</h1>
+	<i><h1>Menu</h1></i>
 	<div class="container">
 		<div class="table-responsive">
 			<table id="foodListTable"
