search by category added

--- a/TipTop/src/main/resources/templates/foodDetail.html
+++ b/TipTop/src/main/resources/templates/foodDetail.html
@@ -33,8 +33,8 @@
     <b><h3 th:text="${food.foodName}"></h3></b>
     <div class="row">
     <div class="col-xs-5">
-    <h5>Category: <strong><span th:text="${food.type}"></span></strong></h5>
-     <h5>Type of Fodd: <strong><span th:text="${food.category}"></span></strong></h5>
+    <h5>Type: <strong><span th:text="${food.type}"></span></strong></h5>
+     <h5>Category: <strong><span th:text="${food.category}"></span></strong></h5>
       <p>Amount of Calories:<strong> <span th:text="${food.numberOfCalories}"></span></strong></p>
        <p>Not Suitable with allergy type :<strong><span th:text="${food.allergyType}"></span> </strong></p>
       
