--- a/TipTop/src/main/resources/templates/menu.html
+++ b/TipTop/src/main/resources/templates/menu.html
@@ -8,8 +8,8 @@
 	<div th:replace="header :: navbar" />
 
 	<div class="container">
-		<div class="row" style="margin-bottom: -100px;">
-			<div class="col-xs-8">
+		<div class="row" >
+			<div class="col-xs-3">
 				<h2 class="section-headline">
 					<h2 class="section-headline">  <i>MENU</i>
 					</h2>
@@ -18,7 +18,24 @@
 
 		</div>
 		<div class="row" style="margin-top: 60px;">
-			<div class="col-xs-9 col-xs-offset-3">
+		
+		<div class="col-xs-3">
+		<h3><label for="category">Category</label></h3>
+		<div class="list-group" id="category">
+		<a th:href="@{/menu(category='all')}" th:classappend="${activeAll}? 'active'" class="list-group-item">All</a>
+		<a th:href="@{/searchByCategory(category='Salad')}" th:classappend="${activeSalad}? 'active'" class="list-group-item">Salad</a>
+		<a th:href="@{/searchByCategory(category='Soup')}" th:classappend="${activeSoup}? 'active'" class="list-group-item">Soup</a>
+		<a th:href="@{/searchByCategory(category='Breakfast')}" th:classappend="${activeBreakfast}? 'active'" class="list-group-item">Breakfast</a>
+		<a th:href="@{/searchByCategory(category='Pizza')}" th:classappend="${activePizza}? 'active'" class="list-group-item">Pizza</a>
+		<a th:href="@{/searchByCategory(category='Pasta')}" th:classappend="${activePasta}? 'active'" class="list-group-item">Pasta</a>
+		
+				<a th:href="@{/searchByCategory(category='Desert')}" th:classappend="${activeDesert}? 'active'" class="list-group-item">Desert</a>
+		
+		
+		</div>
+		</div>
+		
+			<div class="col-xs-9">
 				<div th:if="${emptyList}">
 					<h5 style="font-style: italic;">Oops, no result is found. Try
 						something else or try again later.</h5>
@@ -44,8 +61,8 @@
 											<a th:href="@{/foodDetail?id=}+${food.id}">
 												<h4 th:text="${food.foodName}"></h4>
 											</a> 
-											<h5>Category: <strong><span th:text="${food.type}"></span></strong></h5> 
-											<h5>Type of dish: <strong>
+											<h5>Type: <strong><span th:text="${food.type}"></span></strong></h5> 
+											<h5>Category: <strong>
 											<span
 												th:text="${#strings.capitalize(food.category)}"></span></strong></h5>  <span
 												style="font-size: x-large; color: #db3208;">&euro;<span
