--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -43,7 +43,7 @@
 						</ul></li>
 						
 						
-						<form class="navbar-form">
+						<form class="navbar-form" th:action="@{/searchFood}" method="post">
 						<div class ="form-group">
 						<input type="text" name="keyword" class="form-control" placeholder="Type to search" />
 						</div>
