--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -37,7 +37,7 @@
 						aria-expanded="false">MENU <span class="caret"></span></a>
 						<ul class="dropdown-menu">
 							<li><a sec:authorize="isAnonymous()" th:href="@{/menu}">Full menu</a></li>
-							<li><a href="#">Allergy/Intolerance sort</a></li>
+							<li><a href="#">Allergy an Calorie amount sort</a></li>
 							
 							
 						</ul></li>
@@ -51,7 +51,7 @@
 						</form>
 				
 				
-				<li class="dropdown">
+			<!-- 	<li class="dropdown">
 					<a href="#" class="dropdown-toggle"
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">Search by amount of calories<span class="caret"></span></a>
@@ -65,7 +65,7 @@
 							<li><a href="#">2 200 - 2 400</a></li>
 							<li><a href="#">2 400 - 2 600 </a></li>
 							
-						</ul></li>
+						</ul></li>  -->
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href= "#" >My Orders</a></li>
