alergy sort and calorie filter almost working

--- a/TipTop/src/main/resources/templates/header.html
+++ b/TipTop/src/main/resources/templates/header.html
@@ -36,8 +36,8 @@
 						data-toggle="dropdown" role="button" aria-haspopup="true"
 						aria-expanded="false">MENU <span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a sec:authorize="isAnonymous()" th:href="@{/menu}">Full menu</a></li>
-							<li><a href="#">Allergy an Calorie amount sort</a></li>
+							<li><a  th:href="@{/menu}">Full menu</a></li>
+							<li><a  th:href="@{/calories}">Allergy an Calorie amount sort</a></li>
 							
 							
 						</ul></li>
