--- a/TipTop/src/main/resources/templates/myProfile.html
+++ b/TipTop/src/main/resources/templates/myProfile.html
@@ -21,6 +21,19 @@
     </div>
     <div class="row" style="margin-top: 60px;">
         <div class="col-xs-9 col-xs-offset-3">
+        
+        
+         <!-- Nav tabs -->
+            <ul class="nav nav-tabs">
+                <li th:classappend="${classActiveEdit}? 'active'"><a
+                        href="#tab-1" data-toggle="tab"><span style="color: green;">Edit</span></a></li>
+                <li th:classappend="${classActiveOrders}? 'active'"><a
+                        href="#tab-2" data-toggle="tab"><span style="color: green;">My Order</span></a></li>
+                <li th:classappend="${classActiveBilling}? 'active'"><a
+                        href="#tab-3" data-toggle="tab"><span style="color: green;">Payment</span></a></li>
+                <li th:classappend="${classActiveShipping}? 'active'"><a
+                        href="#tab-4" data-toggle="tab"><span style="color: green;">Delivery</span></a></li>
+            </ul>
 
             <!-- Tab panels -->
             <div class="tab-content">
@@ -87,6 +100,77 @@
                                     <button type="submit" class="btn btn-primary">save
                                     </button>
                                 </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                  <!-- Order information -->
+                <div class="tab-pane fade" id="tab-2"
+                
+                
+                
+                     th:classappend="${classActiveEdit}? 'in active'">
+                    <div class="panel-group">
+                        <div class="panel panel-default" style="border: none;">
+                            <div class="panel-body">
+                        
+                        
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+ <!-- Order information -->
+                <div class="tab-pane fade" id="tab-3"
+                
+                
+                
+                     th:classappend="${classActiveEdit}? 'in active'">
+                    <div class="panel-group">
+                        <div class="panel panel-default" style="border: none;">
+                            <div class="panel-body">
+                            
+                            <ol class ="breadcrumb">
+                            <li class="breadcrumb-item active">
+                            <a th:href="@{/listOfCreditCard}" th:style="${addNewCreditCards}? 'color:red'">List of Credit Cards</a>
+                            </li>
+                            
+                            <li class="breadcrumb-item active">
+                            <a th:href="@{/addNewCreditCard}" th:style="${addNewCreditCard}? 'color:red'">Add/Update credit card</a>
+                            </li>                           
+                            
+                            </ol>
+                            
+                            <div th:if="${listOfCreditCards}">
+                            <form th:action="@{/setDefaultPayment}" method="post">
+                            <table class="table">
+                            <thead>
+                            <tr>
+                            <th>Default</th>
+                            <th>Credit Card</th>
+                            <th>Operations</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="userPayment : ${userPaymentList}">
+                            <td>
+                            <input type="radio" name="defaultUserPaymentId" th:value="${userPayment.id}" th:checked="${userPayment.defaultPayment}"/>
+                            </td>
+                            <td th:text="${userPayment.cardName}"> </td>
+                            <td>
+                            	<a th:href="@{/updateCreditCard(id=$(userPayment.id))}"><i class="fa fa-pencil"></i></a>
+                            	<a th:href="@{/removeCreditCard(id=$(userPayment.id))}"><i class="fa fa-times"></i></a>
+                            	
+                            </td>
+                            </tr>
+                            </tbody>
+                            </table>
+                            	<button class="btn btn-primary" type="submit">Save</button>
+                            </form>
+                            </div>
+                        
+                        
                             </div>
                         </div>
                     </div>
