--- a/BackEnd/src/main/resources/templates/header.html
+++ b/BackEnd/src/main/resources/templates/header.html
@@ -20,6 +20,8 @@
 <link th:href="@{/css/jquery.dataTables.min.css}" rel="stylesheet"/>
 <link th:href="@{/css/dataTables.bootstrap.min.css}" rel="stylesheet"/>
 
+<link th:href="@{css/font-awesome.min.css}" rel="stylesheet" />
+
   <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
   <script>tinymce.init({ selector:'textarea' });</script>
 
